# invoice_line_cost_detection

./: .gitignore  CHANGELOG.md  Clarity Invoice Validator.bat  Clarity Invoice Validator.command  MACOS_MANUAL_CLIENT_STEPS.md  README.md  deploy.sh  diagnose_table_extraction.py  extract_invoice_text.py  invoice-launcher.bat  invoice-launcher.sh  invoice_checker.py  pyproject.toml  test_invoice_processing_flow.py  test_output_location_logic.py
cli/: __init__.py  context.py  error_handlers.py  exceptions.py  formatters.py  main.py  progress.py  prompts.py  validation_helpers.py  validators.py  version.py
database/: __init__.py  database.py  db_migration.py  db_utils.py  models.py
docs/: BULK_OPERATIONS_GUIDE.md  CLI_REMEDIATION_PLAN.md  INTERACTIVE_PART_DISCOVERY.md  REFACTOR_TODO.md  STREAMLINED_VALIDATION_REFACTORING_GUIDE.md  TASKS.md  USER_FLOWS.md  USER_MANUAL.md  VALIDATION_REFACTOR_GUIDE.md
e2e_tests/: README.md  __init__.py  roo.md  test_bulk_operations.py  test_cross_platform_compatibility.py  test_database_management.py  test_discovery_management.py  test_error_handling_edge_cases.py  test_interactive_workflows.py  test_invoice_processing.py  test_parts_management.py  test_status_command.py
invoice-rate-detection-1.0.15/: .deployment_info  BULK_OPERATIONS_GUIDE.md  ERROR_HANDLING_GUIDE.md  INTERACTIVE_PART_DISCOVERY.md  REFACTOR.md  USER_FLOWS.md  Uninstaller.command  __init__.py  error_handlers.py  formatters.py  invoice-launcher.bat  invoice_processor.py  main.py  part_discovery.py  report_utils.py  validation_helpers.py  validators.py
journey_tests/: JOURNEY_TEST_PLAN.md  __init__.py  roo.md  test_choice_selection_prompts.py  test_confirmation_dialogs.py  test_error_recovery_journeys.py  test_interactive_command_workflows.py  test_multi_step_workflow_state.py  test_output_configuration_prompts.py  test_parts_discovery_prompts.py  test_path_input_prompts.py  test_user_cancellation_flows.py  test_validation_mode_selection.py
processing/: __init__.py  exceptions.py  integration.py  invoice_processor.py  models.py  part_discovery.py  part_discovery_models.py  part_discovery_prompts.py  part_discovery_service.py  pdf_processor.py  report_generator.py  report_utils.py  validation_engine.py  validation_integration.py  validation_models.py  validation_strategies.py  validation_strategies_extended.py
test_validation/: README.md  __init__.py  extract_invoice_text.py  extract_lines.py  extract_parts.py  extract_tables.py  extract_text.py  extraction.py  roo.md  run_validation_tests.py  test_cli_validation_output.py  test_expectation_generator.py  test_text_extraction_validation.py  validate_database.py  validate_invoice.py  validation.py
tests/: roo.md  test_batch_processing.py  test_bulk_operations.py  test_cli.py  (+7 more)
(+77 files in other folders)
