[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-rate-detection"
dynamic = ["version"]
description = "Modern CLI tool for invoice validation using parts database and advanced validation strategies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Marcus Swift", email = "marcus@claritybusinesssolutions.ca"},
]
keywords = ["invoice", "parts-database", "validation", "cli", "pdf-processing", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "pdfplumber>=0.7.0",
    "pypdf>=5.7.0",
    "rich>=13.0.0",
    "camelot-py[cv]>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/invoice-rate-detection"
Documentation = "https://github.com/yourusername/invoice-rate-detection#readme"
Repository = "https://github.com/yourusername/invoice-rate-detection.git"
Issues = "https://github.com/yourusername/invoice-rate-detection/issues"

[project.scripts]
invoice-checker = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "database*", "processing*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.dynamic]
version = {attr = "cli.version.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["unit_tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.uv.sources]
invoice-rate-detection = { workspace = true }

[dependency-groups]
dev = [
    "invoice-rate-detection",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
]
